--- a/omokGame/.settings/org.eclipse.core.resources.prefs
+++ b/omokGame/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/java/history/HistoryController.java=UTF-8
 encoding//src/main/java/history/HistoryDAO.java=UTF-8
+encoding//src/main/java/history/MainController.java=UTF-8
 encoding//src/main/java/users/UsersController.java=UTF-8
